--- a/project.config.json
+++ b/project.config.json
@@ -3,10 +3,11 @@
   "packOptions": {
     "ignore": []
   },
+  "cloudbaseRoot": "cloudbase/",
   "setting": {
-    "urlCheck": true,
+    "urlCheck": false,
     "es6": true,
-    "enhance": false,
+    "enhance": true,
     "postcss": true,
     "preloadBackgroundData": false,
     "minified": true,
@@ -37,7 +38,8 @@
     "userConfirmedBundleSwitch": false,
     "packNpmManually": false,
     "packNpmRelationList": [],
-    "minifyWXSS": true
+    "minifyWXSS": true,
+    "useStaticServer": false
   },
   "compileType": "game",
   "libVersion": "2.14.3",
@@ -48,6 +50,7 @@
   },
   "scripts": {},
   "isGameTourist": false,
+  "cloudfunctionTemplateRoot": "cloudfunctionTemplate",
   "condition": {
     "search": {
       "list": []
